# Cpp-New_Meta

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  addExerciseTest.cmake
.circleci/: config.yml
Chapter2-Traits_and_Type_Manipulation/: CMakeLists.txt
Chapter2-Traits_and_Type_Manipulation/Exercise_0/: CMakeLists.txt
Chapter2_Traits_and_Type_Manipulation/: CMakeLists.txt
Chapter2_Traits_and_Type_Manipulation/Exercise_0/: main.cpp
Chapter2_Traits_and_Type_Manipulation/Exercise_1/: main.cpp  replace_type.hpp
Chapter2_Traits_and_Type_Manipulation/Exercise_2/: CMakeLists.txt  main.cpp  polymorphic_downcast.hpp
